--- a/client/login.html
+++ b/client/login.html
@@ -6,15 +6,15 @@
     <link rel="stylesheet" href="/client/css/main.css" type="text/css" />
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
 </head>
-<body>
+<body class="login-page">
     <div class="login">
-        <h1 class="title-text">Bookswap</h1>
+        <!--<h1 class="title-text">Bookswap</h1>-->
         <img src="/client/img/BookswapLogo.png" class="logo-login">
         <!--<img src="client/img/google_32px.png" alt="google logo" />-->
         <a href="/auth/google" class="btn" id="login-google">
             <p><i class="fa fa-google-plus"></i></p>
+            <p class="login-text">LOGIN</p>
         </a>
-        <p class="login-text">LOGIN</p>
     </div>
 </body>
 </html>
